# Lazarus-Core

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
ai/: requirements.txt  server.py
ai/models/: train.py
ai/repair/: audio_repair.py  document_repair.py  image_repair.py  model.py
app/: package-lock.json  package.json
app/assets/: entitlements.mac.plist
app/assets/icons/: icon.icns
app/main/: ai_process.js  boot-error.html  index.js  preload.js
app/main/ipc/: ai.js  license.js  payment.js  scan.js  scan_backend.py
app/native/: README.js
app/renderer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/renderer/src/: App.jsx  main.jsx
app/renderer/src/components/panels/: FileList.jsx  HistoryView.jsx  LicenseView.jsx  PreviewPanel.jsx  ScanView.jsx  SettingsView.jsx
app/renderer/src/components/ui/: ProgressBar.jsx  Sidebar.jsx  TitleBar.jsx  Toast.jsx
app/renderer/src/hooks/: useFormatBytes.js  useScanEvents.js
app/renderer/src/stores/: useAppStore.js
app/renderer/src/styles/: globals.css
app/renderer/src/utils/: fileIcons.js  formatters.js
core/: CMakeLists.txt  binding.gyp
core/include/: apfs_parser.h  disk_reader.h  ext4_parser.h  file_carver.h  file_rebuilder.h  ntfs_parser.h  scan_engine.h  thread_pool.h  types.h
core/src/: binding.cpp  scan_engine.cpp
core/src/apfs/: apfs_parser.cpp
core/src/carver/: file_carver.cpp
core/src/disk/: disk_reader.cpp
core/src/ext4/: ext4_parser.cpp
core/src/ntfs/: ntfs_parser.cpp
core/src/rebuilder/: file_rebuilder.cpp
core/tests/: test_carver.cpp  test_disk.cpp  test_ntfs.cpp
landing/: index.html
scripts/: build-all.ps1  clean.js  generate-icons.js
server/: .env.example  index.js  package-lock.json  package.json
tests/: package-lock.json  package.json  playwright.config.js
tests/e2e/: app.spec.js
